# jackdaw

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml
.cargo/: config.toml
.github/: FUNDING.yaml
.github/workflows/: ci.yaml  release.yaml
assets/: scene.jsn
book/src/developer-guide/: extending-the-editor.md
crates/jackdaw_animation/: Cargo.toml
crates/jackdaw_animation/src/: blend_graph.rs  clip.rs  lib.rs  timeline.rs
crates/jackdaw_api/: Cargo.toml
crates/jackdaw_api/src/: lib.rs  lifecycle.rs  operator.rs
crates/jackdaw_api_internal/: Cargo.toml
crates/jackdaw_api_internal/src/: export.rs  extensions_config.rs  ffi.rs  lib.rs  lifecycle.rs  operator.rs  paths.rs  pie.rs  registries.rs
crates/jackdaw_api_macros/src/: lib.rs
crates/jackdaw_avian_integration/: Cargo.toml
crates/jackdaw_avian_integration/src/: lib.rs  simulation.rs
crates/jackdaw_camera/: Cargo.toml
crates/jackdaw_camera/src/: lib.rs
crates/jackdaw_commands/: Cargo.toml
crates/jackdaw_commands/src/: keybinds.rs  lib.rs
crates/jackdaw_dylib/src/: lib.rs
crates/jackdaw_feathers/: Cargo.toml
crates/jackdaw_feathers/src/: button.rs  collapsible.rs  combobox.rs  context_menu.rs  icons.rs  lib.rs  menu_bar.rs  panel_header.rs  progress.rs  separator.rs  split_panel.rs  status_bar.rs  text_edit.rs  tokens.rs  tooltip.rs  tree_view.rs  utils.rs  vector_edit.rs
crates/jackdaw_feathers/src/color_picker/: input_fields.rs
crates/jackdaw_geometry/: Cargo.toml
crates/jackdaw_jsn/: Cargo.toml
crates/jackdaw_jsn/src/: ast.rs  editor_meta.rs  format.rs  lib.rs  loader.rs  mesh_rebuild.rs  types.rs
crates/jackdaw_loader/src/: compat.rs  lib.rs
crates/jackdaw_node_graph/: Cargo.toml
crates/jackdaw_node_graph/examples/: demo.rs
crates/jackdaw_node_graph/src/: add_node_popover.rs  canvas.rs  commands.rs  connection.rs  gesture.rs  graph.rs  interaction.rs  lib.rs  node_widget.rs  registry.rs  selection.rs  sync.rs
crates/jackdaw_node_graph/src/shaders/: connection.wgsl
crates/jackdaw_panels/: Cargo.toml
crates/jackdaw_panels/src/: drag.rs  lib.rs  reconcile.rs  sidebar.rs  split.rs  tabs.rs  tree.rs  workspace.rs  workspace_tabs.rs
crates/jackdaw_remote/: Cargo.toml
crates/jackdaw_runtime/src/: lib.rs
crates/jackdaw_runtime/tests/: insert_observer_global_transform.rs
crates/jackdaw_rustc_wrapper/: Cargo.toml
crates/jackdaw_rustc_wrapper/src/: lib.rs  main.rs
crates/jackdaw_sdk/src/: lib.rs
crates/jackdaw_terrain/: Cargo.toml
crates/jackdaw_widgets/: Cargo.toml
crates/jackdaw_widgets/src/: context_menu.rs  menu_bar.rs  split_panel.rs  tree_view.rs
examples/: components_in_editor.rs  embedded_game.rs
examples/extension/: minimal_extension.rs
examples/extension/dynamic_extension/: Cargo.toml
examples/extension/dynamic_extension/src/: lib.rs
examples/extension/viewable_camera_extension/: Cargo.toml
examples/extension/viewable_camera_extension/src/: lib.rs
examples/viewable_camera_extension/: Cargo.toml
examples/viewable_camera_extension/src/: lib.rs
src/: add_entity_picker.rs  alignment_guides.rs  app_ops.rs  asset_browser.rs  brush_drag_ops.rs  brush_element_ops.rs  build_status.rs  builtin_extensions.rs  clip_ops.rs  colors.rs  commands.rs  core_extension.rs  default_style.rs  draw_brush.rs  edit_mode_ops.rs  entity_ops.rs  entity_templates.rs  ext_build.rs  extension_lifecycle.rs  extension_loader.rs  extension_resolution.rs  extension_watcher.rs  extensions_dialog.rs  face_grid.rs  gizmo_ops.rs  gizmos.rs  grid_ops.rs  hierarchy.rs  history_ops.rs  keybind_focus.rs  keybind_settings.rs  keybinds.rs  layout.rs  lib.rs  main.rs  material_browser.rs  material_preview.rs  measure_tool.rs  modal_transform.rs  new_project.rs  (+23 more)
src/brush/: gizmo_overlay.rs  hull.rs  interaction.rs  mesh.rs  mod.rs
src/inspector/: anim_diamond.rs  brush_display.rs  component_display.rs  component_picker.rs  component_tooltip.rs  custom_props_display.rs  mod.rs  ops.rs  physics_display.rs  reflect_fields.rs
src/navmesh/: brp_client.rs  build.rs  mod.rs  ops.rs  save_load.rs  toolbar.rs  visualization.rs
src/remote/: remote_inspector.rs
src/terrain/: inspector.rs  mesh.rs  mod.rs  ops.rs  sculpt.rs  toolbar.rs
templates/extension/: Cargo.toml.template  README.md.template  cargo-generate.toml  post-generate.rhai
templates/extension-static/: Cargo.toml.template  README.md.template  cargo-generate.toml  post-generate.rhai
templates/extension-static/src/: lib.rs.template  main.rs.template
templates/extension/src/: lib.rs.template
templates/game/: .gitignore  Cargo.toml.template  README.md.template  build.rs.template  post-generate.rhai
templates/game-static/: Cargo.toml.template  README.md.template  cargo-generate.toml  post-generate.rhai
templates/game-static/.cargo/: config.toml
templates/game-static/assets/: scene.jsn
templates/game-static/src/: lib.rs.template  main.rs.template
templates/game-static/tests/: template_components.rs.template
templates/game/src/: lib.rs.template
tests/: brush_ops.rs  component_picker.rs  dylib_loading.rs  headless.rs  integration.rs  material_browser_none.rs  operator_availability.rs  operator_entity_params.rs  operator_modals.rs  operator_params.rs  operator_smoke.rs  operator_undo.rs  scaffolded_component_flow.rs
tests/fixtures/test_fixture_extension/: Cargo.toml
tests/fixtures/test_fixture_extension/src/: lib.rs
tests/util/: mod.rs
