[package]
name = "jackdaw"
version = "0.4.0"
edition = "2024"
description = "A 3D level editor built with Bevy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbuehler23/jackdaw"
readme = "README.md"
keywords = ["bevy", "editor", "3d", "level-editor"]
categories = ["game-development", "graphics"]
exclude = ["assets/environment_maps/"]

[features]
default = []
hot-reload = ["dep:bevy_simple_subsecond_system"]
# Opt-in dylib-based extension flow. Enables Bevy's
# `dynamic_linking` plus Jackdaw's own `bevy_dylib`-style facade
# so the editor and every loaded extension share one compiled
# copy of every type that crosses the boundary, and pulls in
# `jackdaw_sdk` — the proxy dylib that scaffolded extension
# projects link against via `--extern bevy=libjackdaw_sdk.{so,dll,dylib}`.
#
# Off by default: the current stable path for scaffolded projects
# is the static game/extension templates, which compile plainly
# against `bevy` and don't need the SDK dylib. Opt in with
# `--features dylib` when you want to exercise the hot-reloadable
# dylib extension flow.
#
# Known Windows MSVC limitation: `jackdaw_sdk`'s proxy dylib
# re-exports all of bevy + jackdaw_api, which on Windows is right
# up against the 65,535 PE export cap (see issue #183 and
# bevyengine/bevy#1110). Further symbol-trimming work is needed
# before this is green on Windows.
dylib = ["dep:jackdaw_sdk", "jackdaw_api/dynamic_linking"]

[workspace]
members = [
    "crates/*",
    "examples/extension/dynamic_extension",
    "examples/extension/viewable_camera_extension",
    "tests/fixtures/test_fixture_extension",
]

[dependencies]
bevy.workspace = true
jackdaw_jsn.workspace = true
jackdaw_geometry.workspace = true
bevy_monitors.workspace = true
bevy_infinite_grid.workspace = true
jackdaw_camera.workspace = true
jackdaw_feathers.workspace = true
jackdaw_widgets.workspace = true
jackdaw_commands.workspace = true
jackdaw_terrain.workspace = true
jackdaw_remote.workspace = true
jackdaw_node_graph.workspace = true
jackdaw_animation.workspace = true
jackdaw_avian_integration.workspace = true
jackdaw_panels.workspace = true
jackdaw_api.workspace = true
# The editor crate uses `jackdaw_api` the same way third-party
# extension authors do, and reaches into `jackdaw_api_internal` only
# for host-side plumbing (loader plugin, catalog, enable/disable
# helpers, internal component markers) that `jackdaw_api` deliberately
# doesn't re-export.
jackdaw_api_internal.workspace = true
jackdaw_loader.workspace = true
# Optional and activated only by the `dylib` feature. Nothing in
# the editor's own Rust code imports `jackdaw_sdk` — it's a pure
# build artifact consumed at runtime by the extension build
# pipeline (`SdkPaths::compute` / `ext_build`), which already
# handles a missing SDK with a user-actionable error. Keeping it
# optional means default `cargo build` doesn't try to link
# `jackdaw_sdk.dll` on Windows, where the dylib's re-exports
# would otherwise blow past the 65,535 PE export cap. See issue #183.
jackdaw_sdk = { workspace = true, optional = true }
bevy_enhanced_input.workspace = true
serde.workspace = true
serde_json.workspace = true
avian3d.workspace = true
rfd.workspace = true
bevy_rerecast.workspace = true
ehttp.workspace = true
bincode.workspace = true
base64.workspace = true
anyhow.workspace = true
arboard = { version = "3", features = ["wayland-data-control"] }
dirs.workspace = true
regex.workspace = true
pathdiff.workspace = true
notify = "8"
ctrlc = "3"
bevy_simple_subsecond_system = { version = "0.2", optional = true }

[workspace.dependencies]
bevy = { version = "0.18", features = ["experimental_bevy_feathers", "serialize", "debug", "bevy_remote", "file_watcher"] }
jackdaw_jsn = { version = "0.4.0", path = "crates/jackdaw_jsn" }
jackdaw_geometry = { version = "0.4.0", path = "crates/jackdaw_geometry" }
bevy_monitors = "0.2"
bevy_infinite_grid = "0.18"
jackdaw_camera = { version = "0.4.0", path = "crates/jackdaw_camera" }
jackdaw_feathers = { version = "0.4.0", path = "crates/jackdaw_feathers" }
jackdaw_widgets = { version = "0.4.0", path = "crates/jackdaw_widgets" }
jackdaw_commands = { version = "0.4.0", path = "crates/jackdaw_commands" }
jackdaw_terrain = { version = "0.4.0", path = "crates/jackdaw_terrain" }
jackdaw_remote = { version = "0.4.0", path = "crates/jackdaw_remote" }
jackdaw_node_graph = { version = "0.4.0", path = "crates/jackdaw_node_graph" }
jackdaw_animation = { version = "0.4.0", path = "crates/jackdaw_animation" }
noise = "0.9"
rand = "0.9"
serde = "1"
lucide-icons = "0.563"
serde_json = "1"
bevy_ui_text_input = "0.7"
bevy_easings = "0.18.0"
avian3d = { version = "0.5", default-features = false, features = ["3d", "parry-f32", "collider-from-mesh"] }
jackdaw_avian_integration = { version = "0.4.0", path = "crates/jackdaw_avian_integration" }
jackdaw_runtime = { version = "0.4.0", path = "crates/jackdaw_runtime" }
jackdaw_panels = { version = "0.4.0", path = "crates/jackdaw_panels" }
jackdaw_api = { version = "0.4.0", path = "crates/jackdaw_api" }
jackdaw_api_internal = { version = "0.4.0", path = "crates/jackdaw_api_internal" }
jackdaw_api_macros = { version = "0.4.0", path = "crates/jackdaw_api_macros" }
jackdaw_dylib = { version = "0.4.0", path = "crates/jackdaw_dylib" }
jackdaw_loader = { version = "0.4.0", path = "crates/jackdaw_loader" }
jackdaw_sdk = { version = "0.4.0", path = "crates/jackdaw_sdk" }
bevy_enhanced_input = "0.24"
rfd = "0.15"
bevy_rerecast = { version = "0.4", default-features = true }
ehttp = { version = "0.5", default-features = false, features = ["native-async", "json"] }
bincode = { version = "2", features = ["serde"], default-features = false }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
anyhow = { version = "1", default-features = false }
dirs = "6"
regex = "1"
pathdiff = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"

# Idiomatic Bevy code often triggers these lints, and the CI workflow treats them as errors.
[workspace.lints.clippy]
doc_markdown = "warn"

redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
type_complexity = "allow"
unwrap_or_default = "warn"
needless_lifetimes = "allow"
too_many_arguments = "allow"
nonstandard_macro_braces = "warn"
print_stdout = "warn"

ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"

# see: https://github.com/bevyengine/bevy/pull/15375#issuecomment-2366966219
too_long_first_doc_paragraph = "allow"

allow_attributes = "warn"
allow_attributes_without_reason = "warn"
match_same_arms = "warn"
manual_let_else = "warn"
print_stderr = "warn"
redundant_closure_for_method_calls = "warn"

# TODO: enable these if you have time!
# undocumented_unsafe_blocks = "warn"

[dev-dependencies]
bevy = { workspace = true, features = ["dynamic_linking"] }
jackdaw_runtime.workspace = true
# Pulled in so cargo builds the fixture cdylib as part of the
# workspace test-target graph. `tests/dylib_loading.rs` dlopens the
# resulting `.so` by path — it doesn't reference the rlib side.
test_fixture_extension = { path = "tests/fixtures/test_fixture_extension" }

[lints]
workspace = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.wgpu-types]
debug-assertions = false

# `jackdaw_sdk`'s dylib re-exports all of bevy + jackdaw_api, which
# is right at the Windows MSVC PE export cap (65,535 symbols). Force
# full optimisation and a single codegen unit on just this one crate
# so the linker has a chance of fitting it under the cap when
# `--features dylib` is active on Windows. See issue #183.
[profile.dev.package.jackdaw_sdk]
opt-level = 3
codegen-units = 1

[profile.release]
codegen-units = 1
lto = "thin"

# Same rationale as `[profile.dev.package.jackdaw_sdk]`. `lto` isn't
# a valid per-package option (it controls the final link), so we only
# tighten codegen-units here; the workspace-wide `[profile.release]
# lto = "thin"` covers the cross-crate dedup that actually helps the
# PE export cap.
[profile.release.package.jackdaw_sdk]
codegen-units = 1

[[example]]
name = "minimal_extension"
path = "examples/extension/minimal_extension.rs"
doc-scrape-examples = true
