[package]
name = "jackdaw_avian_integration"
version = "0.2.1"
edition = "2024"
description = "Internal crate for the jackdaw editor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbuehler23/jackdaw"

[dependencies]
bevy.workspace = true
avian3d.workspace = true

[lints]
workspace = true
