[package]
name = "jackdaw_jsn"
version = "0.1.2"
edition = "2024"
description = "Internal crate for the jackdaw editor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbuehler23/jackdaw"

[dependencies]
bevy.workspace = true
jackdaw_geometry.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror = "2"

[lints]
workspace = true
