[package]
name = "jackdaw_node_graph"
version = "0.4.0"
edition = "2024"
description = "Generic node-graph editor widget for the Jackdaw editor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbuehler23/jackdaw"
include = ["src/**/*", "Cargo.toml", "LICENSE*"]

[dependencies]
bevy.workspace = true
bevy_monitors.workspace = true
jackdaw_widgets.workspace = true
jackdaw_feathers.workspace = true
jackdaw_commands.workspace = true
jackdaw_jsn.workspace = true
serde = { workspace = true, features = ["derive"] }

[lints]
workspace = true
