[package]
name = "dynamic_extension"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"
# Dual crate-type: `rlib` keeps the crate linkable into the
# prebuilt binary under the `dev` feature; `cdylib` produces the
# `libsample_extension.so` that the dylib loader picks up. Cargo
# builds both artifacts on every workspace build.
crate-type = ["rlib", "cdylib"]

[dependencies]
bevy.workspace = true
bevy_enhanced_input.workspace = true
jackdaw_api.workspace = true
jackdaw_commands.workspace = true

[lints]
workspace = true
