[package]
name = "test_fixture_extension"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
# cdylib only: this crate exists solely so the integration tests in
# `tests/dylib_loading.rs` can dlopen a real jackdaw extension
# through `jackdaw_loader::load_from_path`.
crate-type = ["cdylib"]

[dependencies]
bevy.workspace = true
bevy_enhanced_input.workspace = true
jackdaw_api.workspace = true

[lints]
workspace = true
